@@ -1,4 +1,6 @@
  Changes since release 1.4:
+    - 2008/10/4 (T.S.): Added weak alias for _BSP_clear_hostbridge_errors()
+	  so that we can link on BSPs w/o that routine.
  Changes since release 1.3-beta:
 	- replaced #ifdef <ppc_cpu_flavor> in memProbe.c by a run-time
 	  check (using libcpu/cpuIdent.h).
